Fixed the weird skew on safari

--- a/app/assets/stylesheets/fw_forms_buttons.scss
+++ b/app/assets/stylesheets/fw_forms_buttons.scss
@@ -196,3 +196,12 @@ label {
   left: 1px;
 	color: $basic-color;
 }
+
+.select2-container--default .select2-selection--single .select2-selection__arrow,
+.select2-container--default .select2-selection--single {
+  height: 42px;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+  line-height: 42px;
+}
